@@ -372,7 +372,7 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories
 # with spaces.
 
-INPUT                  = src src/campaign_server src/editor src/serialization src/server src/sdl_ttf src/tools src/widgets src/zipios++ doc/doxygen/doxygen.cpp
+INPUT                  = src src/campaign_server src/editor src/serialization src/server src/sdl_ttf src/tools src/widgets doc/doxygen/doxygen.cpp
 
 # If the value of the INPUT tag contains directories, you can use the
 # FILE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp 
