@@ -122,4 +122,3 @@ src/widgets/scrollpane.cpp
 src/widgets/slider.cpp
 src/widgets/textbox.cpp
 src/widgets/widget.cpp
-src/zipios++/xcoll.cpp
